fix Xlint issues